# can_odom

./: .gitignore  README.md  run_gi5651_can_odom.sh
src/gi5651_can_odom/: README.md  package.xml  setup.cfg  setup.py
src/gi5651_can_odom/config/: can_2_txt.yaml  txt_2can.yaml
src/gi5651_can_odom/gi5651_can_odom/: gi5651_can_odom_node.py  gi5651_txt_2_can_node.py
src/gi5651_can_odom/launch/: gi5651_can_odom.launch.py  txt_2can.launch.py
tools/: extract_gps_from_can_txt.py  start_usbcan_vcan_bridge.sh  usbcan_to_socketcan.py
