<?xml version="1.0"?>
<package format="3">
  <name>gi5651_can_odom</name>
  <version>0.1.0</version>
  <description>Read GI5651 data from SocketCAN and publish ROS2 odometry.</description>

  <maintainer email="lzz@example.com">lzz</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
